se eliminan metodos no necesarios de wrkflow, se añade modelo de alerta #2
