# swagger/swagger.yml
@@ -263,38 +263,17 @@ paths:
       description: create Workflow
       operationId: WorkflowController.Create
       parameters:
-      - in: body
-        name: body
-        description: body for Workflow content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Workflow'
-      responses:
-        "201":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Workflow'
-        "403":
-          description: body is empty
-  /workflow/{id}:
-    get:
-      tags:
-      - workflow
-      description: get Workflow by id
-      operationId: WorkflowController.GetOne
-      parameters:
-      - in: path
-        name: id
-        description: The key for staticblock
+      - in: query
+        name: docID
+        description: ID del documento
         required: true
         type: string
       responses:
         "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Workflow'
+          description: '{}'
         "403":
-          description: :id is empty
+          description: body is empty
+  /workflow/{id}:
     put:
       tags:
       - workflow
@@ -319,22 +298,6 @@ paths:
             $ref: '#/definitions/models.Workflow'
         "403":
           description: :id is not int
-    delete:
-      tags:
-      - workflow
-      description: delete the Workflow
-      operationId: WorkflowController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: id is empty
 definitions:
   models.Object:
     title: Object
